# OpenGL-Project

./: .gitignore  CMakeLists.txt  OpenGL-Project.sln  OpenGL-Project.vcxproj  OpenGL-Project.vcxproj.filters  Shader.cpp  Shader.h  Source.cpp  glad.c
dependencies/includes/glad/: glad.h
dependencies/lib/: glfw3.lib
